[package]
name = "http_server_tiny"
version = "0.1.5"
edition = "2021"
authors = ["Hakan Vardar"]
description = "HTTP SERVER"
license = "MIT"
repository = "https://github.com/HakanVardarr/http_server_tiny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
